--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
     .del-btn { background: #e67c7c!important; color: #fff;}
     .save-btn { background: #3bb855!important; color: #fff;}
     .cancel-btn {background: #bbb!important; color: #333;}
+    label.rewardLabel {
+      font-weight: 600;
+      display: block;
+      margin-top: 8px;
+      margin-bottom: 4px;
+      color: #555;
+    }
   </style>
 </head>
 <body>
@@ -78,6 +85,9 @@
     <h2>Add a Family Member</h2>
     <input type="text" id="memberName" placeholder="Enter name" style="width:150px"/>
     <input type="text" id="giftName" placeholder="Reward/Gift (e.g. Bike)" style="width:110px"/>
+    <label for="memberRewardTarget" class="rewardLabel">
+      Number of hearts required to earn this member's reward
+    </label>
     <input type="number" id="memberRewardTarget" min="1" max="999" value="30" style="width:60px" />
     <button onclick="addMember()">Add Member</button>
     <br><small>Each member: Name, their dream reward, and hearts needed!</small>
